--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,14 @@
 
 
 	<dependencies>
+
+		<!-- https://mvnrepository.com/artifact/com.google.cloud/google-cloud-translate -->
+		<dependency>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>google-cloud-translate</artifactId>
+			<version>1.95.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
@@ -81,7 +89,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
 			<artifactId>jackson-dataformat-xml</artifactId>
-			<version>2.6.3</version>
+			<version>2.7.8</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -130,7 +138,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.9-rc</version>
+			<version>8.0.16</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -139,13 +147,13 @@
 			<version>1.7</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>com.oracle</groupId>
-			<artifactId>ojdbc</artifactId>
-			<version>8</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/src/test/resources/drivers/ojdbc8.jar</systemPath>
-		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>com.oracle</groupId> -->
+		<!-- <artifactId>ojdbc</artifactId> -->
+		<!-- <version>8</version> -->
+		<!-- <scope>system</scope> -->
+		<!-- <systemPath>${project.basedir}/src/test/resources/drivers/ojdbc8.jar</systemPath> -->
+		<!-- </dependency> -->
 
 		<!-- dependency used to demonstrate SFTP connector -->
 		<dependency>
