Added dictionary support to FieldGenerators.

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<testSuite>RegressionSuite</testSuite>
 		<!-- <testSuite>TC001WikiSearchTest</testSuite> -->
 		<configFile>local</configFile>
+		<dictionaryFile>local</dictionaryFile>
 		<webdriver.driver>chrome</webdriver.driver>
 		<serenity.cucumber.version>1.9.43</serenity.cucumber.version>
 		<serenity.version>2.0.60</serenity.version>
