--- a/pom.xml
+++ b/pom.xml
@@ -322,7 +322,7 @@
 							</systemPropertyVariables>
 						</configuration>
 						<executions>
-							<execution>
+							<execution> 
 								<goals>
 									<goal>integration-test</goal>
 									<goal>verify</goal>
@@ -354,15 +354,15 @@
 						</executions>
 					</plugin>
 
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId>
-						<version>3.3</version>
-						<configuration>
-							<source>1.8</source>
-							<target>1.8</target>
-						</configuration>
-					</plugin>
+<!-- 					<plugin> -->
+<!-- 						<groupId>org.apache.maven.plugins</groupId> -->
+<!-- 						<artifactId>maven-compiler-plugin</artifactId> -->
+<!-- 						<version>3.3</version> -->
+<!-- 						<configuration> -->
+<!-- 							<source>1.8</source> -->
+<!-- 							<target>1.8</target> -->
+<!-- 						</configuration> -->
+<!-- 					</plugin> -->
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-assembly-plugin</artifactId>
